overflow fixes

--- a/products.css
+++ b/products.css
@@ -81,5 +81,5 @@ main{
     background-size: cover;
     background-position: left;
     width: 100%;
-    height: 100vh;
+    height: 120vh;
 }
